# sumo-scraping

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup_playwright.py
analysis/: __init__.py  analyzer.py  utils.py  visualizer.py
analysis/notebooks/: 01_basic_analysis.ipynb  02_visualization.ipynb
analysis/scripts/: run_analysis.py
sumo_scraping/: __init__.py  cli.py  models.py  polite_scraper.py  rate_limiter.py  station_mapping.py  suumo_multi_scraper.py  suumo_scraper.py
suumo_scraping/: suumo_playwright_scraper_new.py
